minor: move api to routes
